syntax = "proto3";
package evmos.claim.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "evmos/claim/v1/claim.proto";

option go_package = "github.com/tharsis/evmos/x/claim/types";

// GenesisState defines the claim module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];

  // list of claim records with the corresponding airdrop recipient
  repeated ClaimRecordAddress claim_records = 2 [(gogoproto.nullable) = false];
}

// Params defines the claim module's parameters.
message Params {
  // enable claiming process
  bool enable_claim = 1;
  // timestamp of the airdrop start
  google.protobuf.Timestamp airdrop_start_time = 2 [
    (gogoproto.nullable) = false,  
    (gogoproto.stdtime) = true
  ];
  // duration until decay of claimable tokens begin
  google.protobuf.Duration duration_until_decay = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
  // duration of the token claim decay period
  google.protobuf.Duration duration_of_decay = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
  // denom of claimable coin
  string claim_denom = 5;
}
